# DOC_AUTO_NEW

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  docauto-backend.md  docauto-format-preservation.md  docauto-resume.md  docauto-templates.md
artifacts/api-server/: package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/docauto/: index.html  package.json  vite.config.ts
artifacts/docauto/.replit-artifact/: artifact.toml
artifacts/docauto/src/: AdminPage.tsx  App.tsx  index.css
attached_assets/: CleanedDocDownload.jsx_1781756276398.txt  CornerDragUI.jsx_1781756276288.txt  DOCAUTOAI.tar.zp_1781756276856. docx  Docautoai_1781756276935.tar  Replit_Prompt_TC_DocAuto_1782454473211.md  UTI_Legal_Doc_Platform_Build_Prompt_1781756276803.docx  ai_extraction_service_1781875990519.py  dewarp_1781756276342.py  dewarp_router_1781756276245.py  document_3_1781802385541.docx  documents_router_addition_1781756276457.py  filled_template_1_1781802385528.docx  image_processing_1781756276520.py  master_data_1782444700264.xlsx  ocr_service_1781756276632.py  requirements_1781756276578.txt
backend/: auth_utils.py  create_admin.py  database.py  main.py  models.py  requirements.txt  schemas.py
backend/routers/: admin.py  auth.py  documents.py  payments.py  resumes.py  templates.py
backend/services/: ai_extraction_service.py  dewarp.py  docx_service.py  format_service.py  hybrid_extraction_service.py  image_preprocess.py  image_processing.py  ocr_service.py  resume_service.py  template_service.py  whatsapp_service.py
