[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.2.1",
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "mammoth==1.8.0",
    "numpy==1.26.4",
    "pdf2image==1.17.0",
    "pdfplumber==0.11.4",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.3",
    "pyjwt==2.9.0",
    "python-docx==1.1.2",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
]
